@@ -1,5 +1,9 @@
 2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* DB.cs: Speed up resetting a revision.
+
+2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* Builder.cs: Remove any paths that were set for Builder.exe
 	  to work before executing any commands.
 
